# social-network-services

./: docker-compose.yml
main/: .gitIgnore  Dockerfile  jest.config.js  package.json  pnpm-lock.yaml
main/docs/: DDD.md  architecture.md
main/prisma/: schema.prisma
main/prisma/migrations/20230810172154_changing_to_postegress/: migration.sql
main/prisma/migrations/20230810180057_lowcase_table_names/: migration.sql
main/prisma/migrations/20230827173717_add_created_in_likes/: migration.sql
main/prisma/migrations/20231029215838_phone_empty/: migration.sql
main/prisma/migrations/20231029220023_removing_phone_default/: migration.sql
main/prisma/migrations/20240113184645_favorites_save/: migration.sql
main/src/framework/: database.ts  server.ts
main/src/interfaces/: express.d.ts
old/prisma/: schema.prisma
old/src/middlewares/: firebase.ts
old/src/services/: video.ts
old/src/utils/: jwt.ts  video.ts
post_action_like/: Cargo.toml  build.rs
post_action_like/migrations/2024-02-01-211405_likes/: down.sql  up.sql
post_action_like/proto/: like.rs  service.proto
post_action_like/src/: db.rs  grpc.rs  kafka.rs  main.rs  models.rs  schema.rs
post_action_like/src/config/: event_type.rs
search/: .gitIgnore  package.json  pnpm-lock.yaml  tsconfig.json
search/prisma/: schema.prisma
search/src/: consumers.ts  grpc.ts  index.ts  kafka.ts
search/src/abstract/: consumer.ts
search/src/config/: db.ts  eventType.ts  index.ts  protobuf.ts
search/src/domain/: dto.ts  repository.ts  usecase.ts
search/src/proto/: search.proto
(+66 files in other folders)
