[package]
name = "post_action_like"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
tonic = "0.10.2"
prost = "0.12.3"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.31"
rdkafka = "0.36.1"
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.10.2"